# elly-server

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
server/: .env.example  README.md  alembic.ini  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 3e0cec013a14_encrypt_sensitive_fields.py  473ce36ea4ce_add_telegram_tables.py  4db7156fbeca_add_reminders_table.py  76f6d8655614_add_app_settings.py  7f9e2bde8ee3_add_scheduling_to_habits.py  82cfd6969882_add_color_to_events.py  b1eaf4a5edb9_add_telegram_bot_token_to_app_settings.py  b5058d2200f7_add_chat_messages.py  ba3b9a1fe7ae_add_openai_api_key_to_app_settings.py  (+7 more)
server/scripts/: smoke_test.py
server/tests/: conftest.py  test_api_auth.py  test_api_budget.py  test_api_calendar.py  test_api_export.py  test_api_ollama.py  test_api_reminders.py  test_api_system.py  test_api_telegram.py  test_auth.py  test_budget_crud.py  test_budget_migration.py  test_budget_quantity_migration.py  test_budget_scheduling.py  test_calendar.py  test_chat_confirmation.py  test_chat_dispatch.py  test_chat_locking.py  test_chat_tool_selection.py  test_config.py  test_crypto.py  test_dashboard.py  test_db_base.py  test_encrypted_types.py  test_export.py  test_habits_crud.py  test_habits_scheduling.py  test_habits_streak.py  test_insights.py  test_llm_client.py  test_memory.py  test_notes.py  test_ollama_admin.py  test_rebrand_migration.py  test_reminders.py  test_settings.py  test_tasks.py  test_telegram.py  test_telegram_process_manager.py  test_telegram_rate_limiter.py
(+64 files in other folders)
